[gd_scene load_steps=14 format=3 uid="uid://bk24bq40j08cy"]

[ext_resource type="Script" uid="uid://dku4i66hcthlt" path="res://scripts/world.gd" id="1_7g83o"]
[ext_resource type="PackedScene" uid="uid://5o0ka2vrc1u" path="res://scenes/Player1.tscn" id="1_32lhk"]
[ext_resource type="PackedScene" uid="uid://bsl7yb7jvsnw" path="res://scenes/Player2.tscn" id="2_7g83o"]
[ext_resource type="PackedScene" uid="uid://biis8qsrgr7pu" path="res://scenes/UI.tscn" id="4_d1c63"]
[ext_resource type="Texture2D" uid="uid://p80fiyx36m0r" path="res://animations/bg_01.png" id="4_h1bdy"]
[ext_resource type="AudioStream" uid="uid://crn46wb0i5yr1" path="res://soundeffects/sword_woosh.wav" id="5_1lgw5"]
[ext_resource type="AudioStream" uid="uid://4hd7yyqnchdd" path="res://soundeffects/ambient.wav" id="5_7c4bj"]
[ext_resource type="AudioStream" uid="uid://brcxa2woko12d" path="res://soundeffects/player_hitsound_01.wav" id="6_0uv0p"]
[ext_resource type="AudioStream" uid="uid://bn72yc3kinsyk" path="res://soundeffects/player_hitsound_02.wav" id="7_b3faq"]
[ext_resource type="AudioStream" uid="uid://62a7xnbdx463" path="res://soundeffects/player_hitsound_03.wav" id="8_b3faq"]
[ext_resource type="AudioStream" uid="uid://cv2twp78dc4gj" path="res://soundeffects/hit.wav" id="10_pdh0q"]
[ext_resource type="AudioStream" uid="uid://udttmh3niu83" path="res://soundeffects/sword_hit.wav" id="12_7c4bj"]
[ext_resource type="AudioStream" uid="uid://ox6dblr7pmmo" path="res://soundeffects/toilet_long.wav" id="13_nrtoj"]

[node name="World" type="Node2D"]
script = ExtResource("1_7g83o")

[node name="BG" type="Sprite2D" parent="."]
texture = ExtResource("4_h1bdy")

[node name="Player1" parent="." instance=ExtResource("1_32lhk")]
position = Vector2(-307, 0)

[node name="Player2" parent="." instance=ExtResource("2_7g83o")]
position = Vector2(307, 0)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="BG_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_7c4bj")
volume_db = -3.0
autoplay = true

[node name="HitSound_01" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_0uv0p")

[node name="HitSound_02" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_b3faq")

[node name="HitSound_03" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_b3faq")

[node name="UI" parent="." instance=ExtResource("4_d1c63")]

[node name="BonkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_pdh0q")

[node name="SwordSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_1lgw5")
volume_db = 4.0
max_polyphony = 4

[node name="ParrySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_7c4bj")
volume_db = -2.0

[node name="ToiletSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_nrtoj")

[connection signal="reset_game" from="UI" to="." method="_on_ui_reset_game"]
[connection signal="start_game" from="UI" to="." method="_on_ui_start_game"]
